# console_bmp_editor

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Image.md  README.md  esh.cpp  pix.cpp
CLanguage/: CMakeLists.txt  ctest.h  ctest_main.c
CLanguage/example/: CMakeLists.txt  example.c
CLanguage/simple_test/: CMakeLists.txt  simple_test.c
CppLanguage/: CMakeLists.txt
CppLanguage/any/: test_any.cpp
CppLanguage/array/: CMakeLists.txt  README.md  array.hpp  test_array.cpp
CppLanguage/complex/: CMakeLists.txt  README.md  test_complex.cpp
CppLanguage/playground/: CMakeLists.txt  main.cpp
CppLanguage/shared_pointer/: README.md
CppLanguage/simple_test/: CMakeLists.txt  simple_test.cpp
CppLanguage/str/: CMakeLists.txt  test_str.cpp
CppLanguage/tasks/: CMakeLists.txt
CppLanguage/tasks/any/: CMakeLists.txt  README.md
CppLanguage/tasks/array/: README.md
CppLanguage/tasks/complex/: CMakeLists.txt  abs.hpp  complex.hpp  test_abs.cpp
CppLanguage/tasks/function/: CMakeLists.txt  README.md  test_function.cpp
CppLanguage/tasks/graph/: CMakeLists.txt  README.md  test_graph.cpp
CppLanguage/tasks/graph/src/: igraph.hpp
CppLanguage/tasks/shared_pointer/: CMakeLists.txt  test_shared_pointer.cpp
CppLanguage/tasks/simple_test/: simple_test.cpp
CppLanguage/tasks/str/: README.md
CppLanguage/tasks/tuple/: CMakeLists.txt  README.md  test_tuple.cpp
CppLanguage/tasks/unique_pointer/: CMakeLists.txt  README.md  test_unique_pointer.cpp
Projects/: CMakeLists.txt  a.out  alg.cpp  alg.hpp  b64.cpp  b64.hpp  bmp.cpp  bmp.hpp  bmp_cli.cpp  bmp_lib.cpp  bmp_lib.hpp  esh.cpp  main.cpp  pix.hpp
Projects/a.out.dSYM/Contents/Resources/DWARF/: a.out
Projects/tests/: CMakeLists.txt
Suplementary/: shell.md
Suplementary/Conspects/: cpp_basics.md
Suplementary/Stuff/: VScode.md  quickstart.md
tests/: CMakeLists.txt  checker.sh
